--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
 
 ADD_SUBDIRECTORY(List)
+ADD_SUBDIRECTORY(Tree)
